[package]
name = "lab_allocator"
version = "0.1.0"
edition = "2021"

[features]
default = []

[dependencies]
allocator = { git = "https://github.com/arceos-org/allocator.git", tag = "v0.1.0", features = [
  "bitmap",
] }
axlog = { workspace = true }
buddy_system_allocator = { version = "0.10", default-features = false }
rlsf = { version = "0.2" }
